--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Kai Szuttor
 description         : >-
-                      I like coffee :coffee:,  clean code, CI, C++, cpython, clion and coding in general..
+                      I like coffee :coffee:,  clean code, CI, C++, CPython, CLion and coding in general
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : kaiszuttor/kaiszuttor.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
