Add github username.

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
 # dribbble          : your_username
   email             : kai@szuttor.de
   #  facebook          : your_username
-  github            : your_username
+  github            : kaiszuttor
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
