--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ author:
   github            : kaiszuttor
 # gitlab            : your_username
 # instagram         : your_username
-# kaggle            : your_username
-# linkedin          : your_username
+# kaggle            : your_username 
+  linkedin          : "Dr. Kai Szuttor"
   #  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
