--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,8 +1,15 @@
+- title: Software Engineer, Philips Medizin Systeme
+  from: 2021
+  to: present
+  description: Developing algorithms for medical devices.
+
+
 - title: PhD Student, University of Stuttgart
   from: 2016
-  to: present
+  to: 2021
   description: Working in the international group of Prof. Dr. Holm in the field of soft
-               matter science.
+               matter science. Finished my Ph.D. with the title 
+               "Modeling the Translocation of DNA Structures through Nanopores".
 
 - title: Master of Science (Physics), University of Stuttgart
   from: 2013
